--- a/styles.css
+++ b/styles.css
@@ -143,9 +143,9 @@ body {
   .pt-table {
     display: table;
     width: 100%;
-    height: -webkit-calc(100vh - 4px);
-    height: -moz-calc(100vh - 4px);
-    height: calc(100vh - 4px); }
+    height: -webkit-calc(100vh - 40px);
+    height: -moz-calc(100vh - 40px);
+    height: calc(100vh - 40px); }
   
   .pt-tablecell {
     display: table-cell;
@@ -258,7 +258,8 @@ body {
   -------------------------------------------------*/
   .mt20{margin-top:20px;}
   .site-wrapper {
-    border-top: 4px solid #ff0037; }
+    border-top: 20px solid #ff0037;
+	border-bottom: 20px solid #ff0037;	}
   
   .page-close {
     font-size: 30px;
